[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-cli"
version = "1.0.0"
description = "A cybersecurity intelligence CLI tool for ethical security assessment"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Khizar Arain", email = "your@email.com" }
]
keywords = ["cybersecurity", "cli", "security", "dns", "ssl", "network", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Internet :: Name Service (DNS)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/khizerarain/sentinel"
Repository = "https://github.com/khizerarain/sentinel"
"Bug Tracker" = "https://github.com/khizerarain/sentinel/issues"

[project.scripts]
sentinel = "sentinel.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]
